// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ParentAliasRow/> With parent value not an option in select 1`] = `
<div
  className="row"
>
  <div
    className="col-xs-2"
  >
    Parent 
    <span
      className="domain-no-wrap"
    >
      Alias
      <div
        className="overlay-trigger"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <span
          className="label-help-target"
        >
          <span
            className="label-help-icon fa fa-question-circle"
          />
        </span>
      </div>
       *
    </span>
  </div>
  <div
    className="col-xs-3"
  >
    <input
      className="form-control"
      defaultValue="testAlias"
      name="alias"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="Enter a parent alias for import"
      type="text"
    />
  </div>
  <div
    className="col-xs-5"
  >
    <div
      className="select-input-container form-group row"
    >
      <div
        className="import-alias--parent-select"
      >
        <div
          className="select-input css-b62m3t-container"
          id="selectinput-9"
          onKeyDown={[Function]}
        >
          <span
            className="css-1f43avz-a11yText-A11yText"
            id="react-select-6-live-region"
          />
          <span
            aria-atomic="false"
            aria-live="polite"
            aria-relevant="additions text"
            className="css-1f43avz-a11yText-A11yText"
            role="log"
          />
          <div
            className="select-input__control css-13cymwt-control"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <div
              className="select-input__value-container select-input__value-container--has-value css-hlgwow"
            >
              <div
                className="select-input__single-value css-1dimb5e-singleValue"
              >
                materialInputs/test
              </div>
              <div
                className="select-input__input-container css-19bb58m"
                data-value=""
              >
                <input
                  aria-activedescendant=""
                  aria-autocomplete="list"
                  aria-expanded={false}
                  aria-haspopup={true}
                  autoCapitalize="none"
                  autoComplete="off"
                  autoCorrect="off"
                  className="select-input__input"
                  disabled={false}
                  id="react-select-6-input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  required={false}
                  role="combobox"
                  spellCheck="false"
                  style={
                    {
                      "background": 0,
                      "border": 0,
                      "color": "inherit",
                      "font": "inherit",
                      "gridArea": "1 / 2",
                      "label": "input",
                      "margin": 0,
                      "minWidth": "2px",
                      "opacity": 1,
                      "outline": 0,
                      "padding": 0,
                      "width": "100%",
                    }
                  }
                  tabIndex={0}
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              className="select-input__indicators css-1wy0on6"
            >
              <div
                aria-hidden="true"
                className="select-input__indicator select-input__clear-indicator css-1xc3v61-indicatorContainer"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
              >
                <svg
                  aria-hidden="true"
                  className="css-tj5bde-Svg"
                  focusable="false"
                  height={20}
                  viewBox="0 0 20 20"
                  width={20}
                >
                  <path
                    d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                  />
                </svg>
              </div>
              <span
                className="select-input__indicator-separator css-1u9des2-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                className="select-input__indicator select-input__dropdown-indicator css-1xc3v61-indicatorContainer"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
              >
                <svg
                  aria-hidden="true"
                  className="css-tj5bde-Svg"
                  focusable="false"
                  height={20}
                  viewBox="0 0 20 20"
                  width={20}
                >
                  <path
                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                  />
                </svg>
              </div>
            </div>
          </div>
          <input
            name="parentValue"
            type="hidden"
            value="materialInputs/test"
          />
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      className="entity-insert--remove-parent"
    >
      <span
        className="container--action-button"
        onClick={[Function]}
      >
        <i
          className="fa fa-times container--removal-icon"
        />
        
      </span>
    </div>
  </div>
</div>
`;

exports[`<ParentAliasRow/> With values 1`] = `
<div
  className="row"
>
  <div
    className="col-xs-2"
  >
    Parent 
    <span
      className="domain-no-wrap"
    >
      Alias
      <div
        className="overlay-trigger"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <span
          className="label-help-target"
        >
          <span
            className="label-help-icon fa fa-question-circle"
          />
        </span>
      </div>
       *
    </span>
  </div>
  <div
    className="col-xs-3"
  >
    <input
      className="form-control"
      defaultValue="testAlias"
      name="alias"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="Enter a parent alias for import"
      type="text"
    />
  </div>
  <div
    className="col-xs-5"
  >
    <div
      className="select-input-container form-group row"
    >
      <div
        className="import-alias--parent-select"
      >
        <div
          className="select-input css-b62m3t-container"
          id="selectinput-5"
          onKeyDown={[Function]}
        >
          <span
            className="css-1f43avz-a11yText-A11yText"
            id="react-select-4-live-region"
          />
          <span
            aria-atomic="false"
            aria-live="polite"
            aria-relevant="additions text"
            className="css-1f43avz-a11yText-A11yText"
            role="log"
          />
          <div
            className="select-input__control css-13cymwt-control"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <div
              className="select-input__value-container select-input__value-container--has-value css-hlgwow"
            >
              <div
                className="select-input__single-value css-1dimb5e-singleValue"
              >
                test
              </div>
              <div
                className="select-input__input-container css-19bb58m"
                data-value=""
              >
                <input
                  aria-activedescendant=""
                  aria-autocomplete="list"
                  aria-expanded={false}
                  aria-haspopup={true}
                  autoCapitalize="none"
                  autoComplete="off"
                  autoCorrect="off"
                  className="select-input__input"
                  disabled={false}
                  id="react-select-4-input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  required={false}
                  role="combobox"
                  spellCheck="false"
                  style={
                    {
                      "background": 0,
                      "border": 0,
                      "color": "inherit",
                      "font": "inherit",
                      "gridArea": "1 / 2",
                      "label": "input",
                      "margin": 0,
                      "minWidth": "2px",
                      "opacity": 1,
                      "outline": 0,
                      "padding": 0,
                      "width": "100%",
                    }
                  }
                  tabIndex={0}
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              className="select-input__indicators css-1wy0on6"
            >
              <div
                aria-hidden="true"
                className="select-input__indicator select-input__clear-indicator css-1xc3v61-indicatorContainer"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
              >
                <svg
                  aria-hidden="true"
                  className="css-tj5bde-Svg"
                  focusable="false"
                  height={20}
                  viewBox="0 0 20 20"
                  width={20}
                >
                  <path
                    d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                  />
                </svg>
              </div>
              <span
                className="select-input__indicator-separator css-1u9des2-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                className="select-input__indicator select-input__dropdown-indicator css-1xc3v61-indicatorContainer"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
              >
                <svg
                  aria-hidden="true"
                  className="css-tj5bde-Svg"
                  focusable="false"
                  height={20}
                  viewBox="0 0 20 20"
                  width={20}
                >
                  <path
                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                  />
                </svg>
              </div>
            </div>
          </div>
          <input
            name="parentValue"
            type="hidden"
            value="materialInputs/test"
          />
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      className="entity-insert--remove-parent"
    >
      <span
        className="container--action-button"
        onClick={[Function]}
      >
        <i
          className="fa fa-times container--removal-icon"
        />
        
      </span>
    </div>
  </div>
</div>
`;
